level-zero/0.95/_sources/sysman/api.rst.txt


==============================
Sysman API
==============================
oneAPI Level Zero Specification - Version 0.95.0

 

 

 




 

 

Device
============================================================
* Functions


    * :ref:`zesDeviceGetProperties`
    * :ref:`zesDeviceGetState`
    * :ref:`zesDeviceReset`
    * :ref:`zesDeviceProcessesGetState`
    * :ref:`zesDevicePciGetProperties`
    * :ref:`zesDevicePciGetState`
    * :ref:`zesDevicePciGetBars`
    * :ref:`zesDevicePciGetStats`

 
* Enumerations


    * :ref:`zes-version-t`
    * :ref:`zes-engine-type-t`
    * :ref:`zes-repair-status-t`
    * :ref:`zes-reset-reasons-t`
    * :ref:`zes-pci-link-status-t`
    * :ref:`zes-pci-link-qual-issues-t`
    * :ref:`zes-pci-link-stab-issues-t`
    * :ref:`zes-pci-bar-type-t`

 
* Structures


    * :ref:`zes-device-state-t`
    * :ref:`zes-device-properties-t`
    * :ref:`zes-process-state-t`
    * :ref:`zes-pci-address-t`
    * :ref:`zes-pci-speed-t`
    * :ref:`zes-pci-properties-t`
    * :ref:`zes-pci-state-t`
    * :ref:`zes-pci-bar-properties-t`
    * :ref:`zes-pci-stats-t`


Device Functions
------------------------------------------------------------------------------


.. _zesDeviceGetProperties:

zesDeviceGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceGetProperties
    :project: LevelZero


.. _zesDeviceGetState:

zesDeviceGetState
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceGetState
    :project: LevelZero


.. _zesDeviceReset:

zesDeviceReset
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceReset
    :project: LevelZero


.. _zesDeviceProcessesGetState:

zesDeviceProcessesGetState
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceProcessesGetState
    :project: LevelZero


.. _zesDevicePciGetProperties:

zesDevicePciGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDevicePciGetProperties
    :project: LevelZero


.. _zesDevicePciGetState:

zesDevicePciGetState
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDevicePciGetState
    :project: LevelZero


.. _zesDevicePciGetBars:

zesDevicePciGetBars
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDevicePciGetBars
    :project: LevelZero


.. _zesDevicePciGetStats:

zesDevicePciGetStats
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDevicePciGetStats
    :project: LevelZero



Device Enums
------------------------------------------------------------------------------


.. _zes-version-t:

zes_version_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_version_t
    :project: LevelZero


.. _zes-engine-type-t:

zes_engine_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_engine_type_t
    :project: LevelZero


.. _zes-repair-status-t:

zes_repair_status_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_repair_status_t
    :project: LevelZero


.. _zes-reset-reasons-t:

zes_reset_reasons_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_reset_reasons_t
    :project: LevelZero


.. _zes-pci-link-status-t:

zes_pci_link_status_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_pci_link_status_t
    :project: LevelZero


.. _zes-pci-link-qual-issues-t:

zes_pci_link_qual_issues_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_pci_link_qual_issues_t
    :project: LevelZero


.. _zes-pci-link-stab-issues-t:

zes_pci_link_stab_issues_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_pci_link_stab_issues_t
    :project: LevelZero


.. _zes-pci-bar-type-t:

zes_pci_bar_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_pci_bar_type_t
    :project: LevelZero

 
Device Structures
------------------------------------------------------------------------------

.. _zes-device-state-t:

zes_device_state_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_device_state_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-device-properties-t:

zes_device_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_device_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-process-state-t:

zes_process_state_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_process_state_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-pci-address-t:

zes_pci_address_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_pci_address_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-pci-speed-t:

zes_pci_speed_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_pci_speed_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-pci-properties-t:

zes_pci_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_pci_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-pci-state-t:

zes_pci_state_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_pci_state_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-pci-bar-properties-t:

zes_pci_bar_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_pci_bar_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-pci-stats-t:

zes_pci_stats_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_pci_stats_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Diagnostics
============================================================
* Functions


    * :ref:`zesDeviceEnumDiagnosticTestSuites`
    * :ref:`zesDiagnosticsGetProperties`
    * :ref:`zesDiagnosticsGetTests`
    * :ref:`zesDiagnosticsRunTests`

 
* Enumerations


    * :ref:`zes-diag-type-t`
    * :ref:`zes-diag-result-t`

 
* Structures


    * :ref:`zes-diag-test-t`
    * :ref:`zes-diag-properties-t`


Diagnostics Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumDiagnosticTestSuites:

zesDeviceEnumDiagnosticTestSuites
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumDiagnosticTestSuites
    :project: LevelZero


.. _zesDiagnosticsGetProperties:

zesDiagnosticsGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDiagnosticsGetProperties
    :project: LevelZero


.. _zesDiagnosticsGetTests:

zesDiagnosticsGetTests
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDiagnosticsGetTests
    :project: LevelZero


.. _zesDiagnosticsRunTests:

zesDiagnosticsRunTests
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDiagnosticsRunTests
    :project: LevelZero



Diagnostics Enums
------------------------------------------------------------------------------


.. _zes-diag-type-t:

zes_diag_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_diag_type_t
    :project: LevelZero


.. _zes-diag-result-t:

zes_diag_result_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_diag_result_t
    :project: LevelZero

 
Diagnostics Structures
------------------------------------------------------------------------------

.. _zes-diag-test-t:

zes_diag_test_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_diag_test_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-diag-properties-t:

zes_diag_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_diag_properties_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Engine
============================================================
* Functions


    * :ref:`zesDeviceEnumEngineGroups`
    * :ref:`zesEngineGetProperties`
    * :ref:`zesEngineGetActivity`

 
* Enumerations


    * :ref:`zes-engine-group-t`

 
* Structures


    * :ref:`zes-engine-properties-t`
    * :ref:`zes-engine-stats-t`


Engine Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumEngineGroups:

zesDeviceEnumEngineGroups
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumEngineGroups
    :project: LevelZero


.. _zesEngineGetProperties:

zesEngineGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesEngineGetProperties
    :project: LevelZero


.. _zesEngineGetActivity:

zesEngineGetActivity
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesEngineGetActivity
    :project: LevelZero



Engine Enums
------------------------------------------------------------------------------


.. _zes-engine-group-t:

zes_engine_group_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_engine_group_t
    :project: LevelZero

 
Engine Structures
------------------------------------------------------------------------------

.. _zes-engine-properties-t:

zes_engine_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_engine_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-engine-stats-t:

zes_engine_stats_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_engine_stats_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Events
============================================================
* Functions


    * :ref:`zesDeviceCreateEvents`
    * :ref:`zesEventGetConfig`
    * :ref:`zesEventSetConfig`
    * :ref:`zesEventGetState`
    * :ref:`zesEventListen`

 
* Enumerations


    * :ref:`zes-event-type-t`

 
* Structures


    * :ref:`zes-event-config-t`


Events Functions
------------------------------------------------------------------------------


.. _zesDeviceCreateEvents:

zesDeviceCreateEvents
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceCreateEvents
    :project: LevelZero


.. _zesEventGetConfig:

zesEventGetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesEventGetConfig
    :project: LevelZero


.. _zesEventSetConfig:

zesEventSetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesEventSetConfig
    :project: LevelZero


.. _zesEventGetState:

zesEventGetState
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesEventGetState
    :project: LevelZero


.. _zesEventListen:

zesEventListen
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesEventListen
    :project: LevelZero



Events Enums
------------------------------------------------------------------------------


.. _zes-event-type-t:

zes_event_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_event_type_t
    :project: LevelZero

 
Events Structures
------------------------------------------------------------------------------

.. _zes-event-config-t:

zes_event_config_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_event_config_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Fabric
============================================================
* Functions


    * :ref:`zesDeviceEnumFabricPorts`
    * :ref:`zesFabricPortGetProperties`
    * :ref:`zesFabricPortGetLinkType`
    * :ref:`zesFabricPortGetConfig`
    * :ref:`zesFabricPortSetConfig`
    * :ref:`zesFabricPortGetState`
    * :ref:`zesFabricPortGetThroughput`

 
* Enumerations


    * :ref:`zes-fabric-port-status-t`
    * :ref:`zes-fabric-port-qual-issues-t`
    * :ref:`zes-fabric-port-stab-issues-t`

 
* Structures


    * :ref:`zes-fabric-port-id-t`
    * :ref:`zes-fabric-port-speed-t`
    * :ref:`zes-fabric-port-properties-t`
    * :ref:`zes-fabric-link-type-t`
    * :ref:`zes-fabric-port-config-t`
    * :ref:`zes-fabric-port-state-t`
    * :ref:`zes-fabric-port-throughput-t`


Fabric Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumFabricPorts:

zesDeviceEnumFabricPorts
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumFabricPorts
    :project: LevelZero


.. _zesFabricPortGetProperties:

zesFabricPortGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFabricPortGetProperties
    :project: LevelZero


.. _zesFabricPortGetLinkType:

zesFabricPortGetLinkType
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFabricPortGetLinkType
    :project: LevelZero


.. _zesFabricPortGetConfig:

zesFabricPortGetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFabricPortGetConfig
    :project: LevelZero


.. _zesFabricPortSetConfig:

zesFabricPortSetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFabricPortSetConfig
    :project: LevelZero


.. _zesFabricPortGetState:

zesFabricPortGetState
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFabricPortGetState
    :project: LevelZero


.. _zesFabricPortGetThroughput:

zesFabricPortGetThroughput
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFabricPortGetThroughput
    :project: LevelZero



Fabric Enums
------------------------------------------------------------------------------


.. _zes-fabric-port-status-t:

zes_fabric_port_status_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_fabric_port_status_t
    :project: LevelZero


.. _zes-fabric-port-qual-issues-t:

zes_fabric_port_qual_issues_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_fabric_port_qual_issues_t
    :project: LevelZero


.. _zes-fabric-port-stab-issues-t:

zes_fabric_port_stab_issues_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_fabric_port_stab_issues_t
    :project: LevelZero

 
Fabric Structures
------------------------------------------------------------------------------

.. _zes-fabric-port-id-t:

zes_fabric_port_id_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_fabric_port_id_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-fabric-port-speed-t:

zes_fabric_port_speed_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_fabric_port_speed_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-fabric-port-properties-t:

zes_fabric_port_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_fabric_port_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-fabric-link-type-t:

zes_fabric_link_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_fabric_link_type_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-fabric-port-config-t:

zes_fabric_port_config_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_fabric_port_config_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-fabric-port-state-t:

zes_fabric_port_state_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_fabric_port_state_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-fabric-port-throughput-t:

zes_fabric_port_throughput_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_fabric_port_throughput_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Fan
============================================================
* Functions


    * :ref:`zesDeviceEnumFans`
    * :ref:`zesFanGetProperties`
    * :ref:`zesFanGetConfig`
    * :ref:`zesFanSetConfig`
    * :ref:`zesFanGetState`

 
* Enumerations


    * :ref:`zes-fan-speed-mode-t`
    * :ref:`zes-fan-speed-units-t`

 
* Structures


    * :ref:`zes-fan-temp-speed-t`
    * :ref:`zes-fan-properties-t`
    * :ref:`zes-fan-config-t`


Fan Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumFans:

zesDeviceEnumFans
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumFans
    :project: LevelZero


.. _zesFanGetProperties:

zesFanGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFanGetProperties
    :project: LevelZero


.. _zesFanGetConfig:

zesFanGetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFanGetConfig
    :project: LevelZero


.. _zesFanSetConfig:

zesFanSetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFanSetConfig
    :project: LevelZero


.. _zesFanGetState:

zesFanGetState
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFanGetState
    :project: LevelZero



Fan Enums
------------------------------------------------------------------------------


.. _zes-fan-speed-mode-t:

zes_fan_speed_mode_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_fan_speed_mode_t
    :project: LevelZero


.. _zes-fan-speed-units-t:

zes_fan_speed_units_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_fan_speed_units_t
    :project: LevelZero

 
Fan Structures
------------------------------------------------------------------------------

.. _zes-fan-temp-speed-t:

zes_fan_temp_speed_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_fan_temp_speed_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-fan-properties-t:

zes_fan_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_fan_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-fan-config-t:

zes_fan_config_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_fan_config_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Firmware
============================================================
* Functions


    * :ref:`zesDeviceEnumFirmwares`
    * :ref:`zesFirmwareGetProperties`
    * :ref:`zesFirmwareGetChecksum`
    * :ref:`zesFirmwareFlash`

 

 
* Structures


    * :ref:`zes-firmware-properties-t`


Firmware Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumFirmwares:

zesDeviceEnumFirmwares
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumFirmwares
    :project: LevelZero


.. _zesFirmwareGetProperties:

zesFirmwareGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFirmwareGetProperties
    :project: LevelZero


.. _zesFirmwareGetChecksum:

zesFirmwareGetChecksum
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFirmwareGetChecksum
    :project: LevelZero


.. _zesFirmwareFlash:

zesFirmwareFlash
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFirmwareFlash
    :project: LevelZero



 
Firmware Structures
------------------------------------------------------------------------------

.. _zes-firmware-properties-t:

zes_firmware_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_firmware_properties_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Frequency
============================================================
* Functions


    * :ref:`zesDeviceEnumFrequencyDomains`
    * :ref:`zesFrequencyGetProperties`
    * :ref:`zesFrequencyGetAvailableClocks`
    * :ref:`zesFrequencyGetRange`
    * :ref:`zesFrequencySetRange`
    * :ref:`zesFrequencyGetState`
    * :ref:`zesFrequencyGetThrottleTime`
    * :ref:`zesFrequencyOcGetCapabilities`
    * :ref:`zesFrequencyOcGetConfig`
    * :ref:`zesFrequencyOcSetConfig`
    * :ref:`zesFrequencyOcGetIccMax`
    * :ref:`zesFrequencyOcSetIccMax`
    * :ref:`zesFrequencyOcGetTjMax`
    * :ref:`zesFrequencyOcSetTjMax`

 
* Enumerations


    * :ref:`zes-freq-domain-t`
    * :ref:`zes-freq-throttle-reasons-t`
    * :ref:`zes-oc-mode-t`

 
* Structures


    * :ref:`zes-freq-properties-t`
    * :ref:`zes-freq-range-t`
    * :ref:`zes-freq-state-t`
    * :ref:`zes-freq-throttle-time-t`
    * :ref:`zes-oc-capabilities-t`
    * :ref:`zes-oc-config-t`


Frequency Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumFrequencyDomains:

zesDeviceEnumFrequencyDomains
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumFrequencyDomains
    :project: LevelZero


.. _zesFrequencyGetProperties:

zesFrequencyGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFrequencyGetProperties
    :project: LevelZero


.. _zesFrequencyGetAvailableClocks:

zesFrequencyGetAvailableClocks
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFrequencyGetAvailableClocks
    :project: LevelZero


.. _zesFrequencyGetRange:

zesFrequencyGetRange
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFrequencyGetRange
    :project: LevelZero


.. _zesFrequencySetRange:

zesFrequencySetRange
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFrequencySetRange
    :project: LevelZero


.. _zesFrequencyGetState:

zesFrequencyGetState
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFrequencyGetState
    :project: LevelZero


.. _zesFrequencyGetThrottleTime:

zesFrequencyGetThrottleTime
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFrequencyGetThrottleTime
    :project: LevelZero


.. _zesFrequencyOcGetCapabilities:

zesFrequencyOcGetCapabilities
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFrequencyOcGetCapabilities
    :project: LevelZero


.. _zesFrequencyOcGetConfig:

zesFrequencyOcGetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFrequencyOcGetConfig
    :project: LevelZero


.. _zesFrequencyOcSetConfig:

zesFrequencyOcSetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFrequencyOcSetConfig
    :project: LevelZero


.. _zesFrequencyOcGetIccMax:

zesFrequencyOcGetIccMax
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFrequencyOcGetIccMax
    :project: LevelZero


.. _zesFrequencyOcSetIccMax:

zesFrequencyOcSetIccMax
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFrequencyOcSetIccMax
    :project: LevelZero


.. _zesFrequencyOcGetTjMax:

zesFrequencyOcGetTjMax
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFrequencyOcGetTjMax
    :project: LevelZero


.. _zesFrequencyOcSetTjMax:

zesFrequencyOcSetTjMax
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesFrequencyOcSetTjMax
    :project: LevelZero



Frequency Enums
------------------------------------------------------------------------------


.. _zes-freq-domain-t:

zes_freq_domain_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_freq_domain_t
    :project: LevelZero


.. _zes-freq-throttle-reasons-t:

zes_freq_throttle_reasons_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_freq_throttle_reasons_t
    :project: LevelZero


.. _zes-oc-mode-t:

zes_oc_mode_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_oc_mode_t
    :project: LevelZero

 
Frequency Structures
------------------------------------------------------------------------------

.. _zes-freq-properties-t:

zes_freq_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_freq_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-freq-range-t:

zes_freq_range_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_freq_range_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-freq-state-t:

zes_freq_state_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_freq_state_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-freq-throttle-time-t:

zes_freq_throttle_time_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_freq_throttle_time_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-oc-capabilities-t:

zes_oc_capabilities_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_oc_capabilities_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-oc-config-t:

zes_oc_config_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_oc_config_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Led
============================================================
* Functions


    * :ref:`zesDeviceEnumLeds`
    * :ref:`zesLedGetProperties`
    * :ref:`zesLedGetState`
    * :ref:`zesLedSetState`

 

 
* Structures


    * :ref:`zes-led-properties-t`
    * :ref:`zes-led-state-t`


Led Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumLeds:

zesDeviceEnumLeds
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumLeds
    :project: LevelZero


.. _zesLedGetProperties:

zesLedGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesLedGetProperties
    :project: LevelZero


.. _zesLedGetState:

zesLedGetState
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesLedGetState
    :project: LevelZero


.. _zesLedSetState:

zesLedSetState
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesLedSetState
    :project: LevelZero



 
Led Structures
------------------------------------------------------------------------------

.. _zes-led-properties-t:

zes_led_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_led_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-led-state-t:

zes_led_state_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_led_state_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Memory
============================================================
* Functions


    * :ref:`zesDeviceEnumMemoryModules`
    * :ref:`zesMemoryGetProperties`
    * :ref:`zesMemoryGetState`
    * :ref:`zesMemoryGetBandwidth`

 
* Enumerations


    * :ref:`zes-mem-type-t`
    * :ref:`zes-mem-health-t`

 
* Structures


    * :ref:`zes-mem-properties-t`
    * :ref:`zes-mem-state-t`
    * :ref:`zes-mem-bandwidth-t`


Memory Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumMemoryModules:

zesDeviceEnumMemoryModules
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumMemoryModules
    :project: LevelZero


.. _zesMemoryGetProperties:

zesMemoryGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesMemoryGetProperties
    :project: LevelZero


.. _zesMemoryGetState:

zesMemoryGetState
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesMemoryGetState
    :project: LevelZero


.. _zesMemoryGetBandwidth:

zesMemoryGetBandwidth
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesMemoryGetBandwidth
    :project: LevelZero



Memory Enums
------------------------------------------------------------------------------


.. _zes-mem-type-t:

zes_mem_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_mem_type_t
    :project: LevelZero


.. _zes-mem-health-t:

zes_mem_health_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_mem_health_t
    :project: LevelZero

 
Memory Structures
------------------------------------------------------------------------------

.. _zes-mem-properties-t:

zes_mem_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_mem_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-mem-state-t:

zes_mem_state_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_mem_state_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-mem-bandwidth-t:

zes_mem_bandwidth_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_mem_bandwidth_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Performance
============================================================
* Functions


    * :ref:`zesDeviceEnumPerformanceFactorDomains`
    * :ref:`zesPerformanceFactorGetProperties`
    * :ref:`zesPerformanceFactorGetConfig`
    * :ref:`zesPerformanceFactorSetConfig`

 

 
* Structures


    * :ref:`zes-perf-properties-t`


Performance Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumPerformanceFactorDomains:

zesDeviceEnumPerformanceFactorDomains
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumPerformanceFactorDomains
    :project: LevelZero


.. _zesPerformanceFactorGetProperties:

zesPerformanceFactorGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesPerformanceFactorGetProperties
    :project: LevelZero


.. _zesPerformanceFactorGetConfig:

zesPerformanceFactorGetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesPerformanceFactorGetConfig
    :project: LevelZero


.. _zesPerformanceFactorSetConfig:

zesPerformanceFactorSetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesPerformanceFactorSetConfig
    :project: LevelZero



 
Performance Structures
------------------------------------------------------------------------------

.. _zes-perf-properties-t:

zes_perf_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_perf_properties_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Power
============================================================
* Functions


    * :ref:`zesDeviceEnumPowerDomains`
    * :ref:`zesPowerGetProperties`
    * :ref:`zesPowerGetEnergyCounter`
    * :ref:`zesPowerGetLimits`
    * :ref:`zesPowerSetLimits`
    * :ref:`zesPowerGetEnergyThreshold`
    * :ref:`zesPowerSetEnergyThreshold`

 

 
* Structures


    * :ref:`zes-power-properties-t`
    * :ref:`zes-power-energy-counter-t`
    * :ref:`zes-power-sustained-limit-t`
    * :ref:`zes-power-burst-limit-t`
    * :ref:`zes-power-peak-limit-t`
    * :ref:`zes-energy-threshold-t`


Power Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumPowerDomains:

zesDeviceEnumPowerDomains
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumPowerDomains
    :project: LevelZero


.. _zesPowerGetProperties:

zesPowerGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesPowerGetProperties
    :project: LevelZero


.. _zesPowerGetEnergyCounter:

zesPowerGetEnergyCounter
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesPowerGetEnergyCounter
    :project: LevelZero


.. _zesPowerGetLimits:

zesPowerGetLimits
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesPowerGetLimits
    :project: LevelZero


.. _zesPowerSetLimits:

zesPowerSetLimits
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesPowerSetLimits
    :project: LevelZero


.. _zesPowerGetEnergyThreshold:

zesPowerGetEnergyThreshold
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesPowerGetEnergyThreshold
    :project: LevelZero


.. _zesPowerSetEnergyThreshold:

zesPowerSetEnergyThreshold
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesPowerSetEnergyThreshold
    :project: LevelZero



 
Power Structures
------------------------------------------------------------------------------

.. _zes-power-properties-t:

zes_power_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_power_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-power-energy-counter-t:

zes_power_energy_counter_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_power_energy_counter_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-power-sustained-limit-t:

zes_power_sustained_limit_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_power_sustained_limit_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-power-burst-limit-t:

zes_power_burst_limit_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_power_burst_limit_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-power-peak-limit-t:

zes_power_peak_limit_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_power_peak_limit_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-energy-threshold-t:

zes_energy_threshold_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_energy_threshold_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Psu
============================================================
* Functions


    * :ref:`zesDeviceEnumPsus`
    * :ref:`zesPsuGetProperties`
    * :ref:`zesPsuGetState`

 
* Enumerations


    * :ref:`zes-psu-voltage-status-t`

 
* Structures


    * :ref:`zes-psu-properties-t`
    * :ref:`zes-psu-state-t`


Psu Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumPsus:

zesDeviceEnumPsus
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumPsus
    :project: LevelZero


.. _zesPsuGetProperties:

zesPsuGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesPsuGetProperties
    :project: LevelZero


.. _zesPsuGetState:

zesPsuGetState
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesPsuGetState
    :project: LevelZero



Psu Enums
------------------------------------------------------------------------------


.. _zes-psu-voltage-status-t:

zes_psu_voltage_status_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_psu_voltage_status_t
    :project: LevelZero

 
Psu Structures
------------------------------------------------------------------------------

.. _zes-psu-properties-t:

zes_psu_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_psu_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-psu-state-t:

zes_psu_state_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_psu_state_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Ras
============================================================
* Functions


    * :ref:`zesDeviceEnumRasErrorSets`
    * :ref:`zesRasGetProperties`
    * :ref:`zesRasGetConfig`
    * :ref:`zesRasSetConfig`
    * :ref:`zesRasGetState`

 
* Enumerations


    * :ref:`zes-ras-error-type-t`
    * :ref:`zes-ras-error-cat-t`

 
* Structures


    * :ref:`zes-ras-properties-t`
    * :ref:`zes-ras-state-t`
    * :ref:`zes-ras-config-t`


Ras Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumRasErrorSets:

zesDeviceEnumRasErrorSets
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumRasErrorSets
    :project: LevelZero


.. _zesRasGetProperties:

zesRasGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesRasGetProperties
    :project: LevelZero


.. _zesRasGetConfig:

zesRasGetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesRasGetConfig
    :project: LevelZero


.. _zesRasSetConfig:

zesRasSetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesRasSetConfig
    :project: LevelZero


.. _zesRasGetState:

zesRasGetState
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesRasGetState
    :project: LevelZero



Ras Enums
------------------------------------------------------------------------------


.. _zes-ras-error-type-t:

zes_ras_error_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_ras_error_type_t
    :project: LevelZero


.. _zes-ras-error-cat-t:

zes_ras_error_cat_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_ras_error_cat_t
    :project: LevelZero

 
Ras Structures
------------------------------------------------------------------------------

.. _zes-ras-properties-t:

zes_ras_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_ras_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-ras-state-t:

zes_ras_state_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_ras_state_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-ras-config-t:

zes_ras_config_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_ras_config_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Scheduler
============================================================
* Functions


    * :ref:`zesDeviceEnumSchedulers`
    * :ref:`zesSchedulerGetProperties`
    * :ref:`zesSchedulerGetCurrentMode`
    * :ref:`zesSchedulerGetTimeoutModeProperties`
    * :ref:`zesSchedulerGetTimesliceModeProperties`
    * :ref:`zesSchedulerSetTimeoutMode`
    * :ref:`zesSchedulerSetTimesliceMode`
    * :ref:`zesSchedulerSetExclusiveMode`
    * :ref:`zesSchedulerSetComputeUnitDebugMode`

 
* Enumerations


    * :ref:`zes-sched-mode-t`

 
* Structures


    * :ref:`zes-sched-properties-t`
    * :ref:`zes-sched-timeout-properties-t`
    * :ref:`zes-sched-timeslice-properties-t`


Scheduler Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumSchedulers:

zesDeviceEnumSchedulers
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumSchedulers
    :project: LevelZero


.. _zesSchedulerGetProperties:

zesSchedulerGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesSchedulerGetProperties
    :project: LevelZero


.. _zesSchedulerGetCurrentMode:

zesSchedulerGetCurrentMode
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesSchedulerGetCurrentMode
    :project: LevelZero


.. _zesSchedulerGetTimeoutModeProperties:

zesSchedulerGetTimeoutModeProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesSchedulerGetTimeoutModeProperties
    :project: LevelZero


.. _zesSchedulerGetTimesliceModeProperties:

zesSchedulerGetTimesliceModeProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesSchedulerGetTimesliceModeProperties
    :project: LevelZero


.. _zesSchedulerSetTimeoutMode:

zesSchedulerSetTimeoutMode
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesSchedulerSetTimeoutMode
    :project: LevelZero


.. _zesSchedulerSetTimesliceMode:

zesSchedulerSetTimesliceMode
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesSchedulerSetTimesliceMode
    :project: LevelZero


.. _zesSchedulerSetExclusiveMode:

zesSchedulerSetExclusiveMode
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesSchedulerSetExclusiveMode
    :project: LevelZero


.. _zesSchedulerSetComputeUnitDebugMode:

zesSchedulerSetComputeUnitDebugMode
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesSchedulerSetComputeUnitDebugMode
    :project: LevelZero



Scheduler Enums
------------------------------------------------------------------------------


.. _zes-sched-mode-t:

zes_sched_mode_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_sched_mode_t
    :project: LevelZero

 
Scheduler Structures
------------------------------------------------------------------------------

.. _zes-sched-properties-t:

zes_sched_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_sched_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-sched-timeout-properties-t:

zes_sched_timeout_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_sched_timeout_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-sched-timeslice-properties-t:

zes_sched_timeslice_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_sched_timeslice_properties_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Standby
============================================================
* Functions


    * :ref:`zesDeviceEnumStandbyDomains`
    * :ref:`zesStandbyGetProperties`
    * :ref:`zesStandbyGetMode`
    * :ref:`zesStandbySetMode`

 
* Enumerations


    * :ref:`zes-standby-type-t`
    * :ref:`zes-standby-promo-mode-t`

 
* Structures


    * :ref:`zes-standby-properties-t`


Standby Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumStandbyDomains:

zesDeviceEnumStandbyDomains
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumStandbyDomains
    :project: LevelZero


.. _zesStandbyGetProperties:

zesStandbyGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesStandbyGetProperties
    :project: LevelZero


.. _zesStandbyGetMode:

zesStandbyGetMode
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesStandbyGetMode
    :project: LevelZero


.. _zesStandbySetMode:

zesStandbySetMode
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesStandbySetMode
    :project: LevelZero



Standby Enums
------------------------------------------------------------------------------


.. _zes-standby-type-t:

zes_standby_type_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_standby_type_t
    :project: LevelZero


.. _zes-standby-promo-mode-t:

zes_standby_promo_mode_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_standby_promo_mode_t
    :project: LevelZero

 
Standby Structures
------------------------------------------------------------------------------

.. _zes-standby-properties-t:

zes_standby_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_standby_properties_t
    :project: LevelZero
    :members:
    :undoc-members:


 

Temperature
============================================================
* Functions


    * :ref:`zesDeviceEnumTemperatureSensors`
    * :ref:`zesTemperatureGetProperties`
    * :ref:`zesTemperatureGetConfig`
    * :ref:`zesTemperatureSetConfig`
    * :ref:`zesTemperatureGetState`

 
* Enumerations


    * :ref:`zes-temp-sensors-t`

 
* Structures


    * :ref:`zes-temp-properties-t`
    * :ref:`zes-temp-threshold-t`
    * :ref:`zes-temp-config-t`


Temperature Functions
------------------------------------------------------------------------------


.. _zesDeviceEnumTemperatureSensors:

zesDeviceEnumTemperatureSensors
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesDeviceEnumTemperatureSensors
    :project: LevelZero


.. _zesTemperatureGetProperties:

zesTemperatureGetProperties
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesTemperatureGetProperties
    :project: LevelZero


.. _zesTemperatureGetConfig:

zesTemperatureGetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesTemperatureGetConfig
    :project: LevelZero


.. _zesTemperatureSetConfig:

zesTemperatureSetConfig
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesTemperatureSetConfig
    :project: LevelZero


.. _zesTemperatureGetState:

zesTemperatureGetState
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenfunction:: zesTemperatureGetState
    :project: LevelZero



Temperature Enums
------------------------------------------------------------------------------


.. _zes-temp-sensors-t:

zes_temp_sensors_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenenum:: zes_temp_sensors_t
    :project: LevelZero

 
Temperature Structures
------------------------------------------------------------------------------

.. _zes-temp-properties-t:

zes_temp_properties_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_temp_properties_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-temp-threshold-t:

zes_temp_threshold_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_temp_threshold_t
    :project: LevelZero
    :members:
    :undoc-members:

.. _zes-temp-config-t:

zes_temp_config_t
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. doxygenstruct:: zes_temp_config_t
    :project: LevelZero
    :members:
    :undoc-members:


